<resources>
    <string name="app_name">Odczyt gazu</string>

    <string name="phone_number">608 600 608</string>

    <string name="meter_reading">Odczyt licznika</string>
    <string name="permission_info">Aby przesłać stan licznika gazu na numer 608 600 608 pozwól aplikacji na wysyłanie wiadomości.</string>
    <string name="permission_info_1">Aby przesłać stan licznika gazu na numer</string>
    <string name="permission_info_2">pozwól aplikacji na wysyłanie wiadomości.</string>
    <string name="permission_info_oreo_title">Wygląda na to,</string>
    <string name="permission_info_oreo">że wersja Androida na Twoim telefonie to Oreo. Do wysłania odczytu licznika wymagane jest pozwolenie na wykonywanie połączeń.</string>

    <string name="set_bank_account_number">Dodaj numer rachunku</string>
    <string name="edit_bank_account_number">Edytuj numer rachunku</string>
    <string name="bank_account_info">Podaj numer indywidualnego rachunku bankowego odbiorcy z faktury w celu identyfikacji klienta - 26 cyfr.\nNazwa jest opcjonalna.</string>
    <string name="where_to_find">Gdzie znajdę numer rachunku?</string>

    <string name="where_to_find_text">Numer rachunku odbiorcy, który należy podać znajduje się na przykład w górnej części faktury. Zaznaczono go pomarańczowym prostokątem</string>
    <string name="where_to_find_black">Numer rachunku odbiorcy, który należy podać znajduje się na przykład w górnej części faktury. Zaznaczono go</string>
    <string name="where_to_find_orange">pomarańczowym prostokątem</string>

    <string name="meter_reading_info">Podaj odczyt licznika gazomierza zaokrąglając go do pełnych metrów sześciennych - maksymalnie 5 cyfr.\nZostanie on przesłany na numer 608 600 608.</string>
    <string name="dots">-----</string>
    <string name="m3">m3</string>
    <string name="bank_account_number_info">Numer indywidualnego rachunku</string>
    <string name="bank_account_number_example">12 3456 7890 1234 5678 9012 3456</string>


    <string name="gas_meter_value_not_set">Proszę, podaj stan licznika</string>

    <string name="send_confirm">Czy na pewno przesłać stan licznika?\nWprowadzono</string>


    <!-- Buttons -->
    <string name="continue_button">Kontynuuj</string>
    <string name="edit_number">Edytuj numer</string>

    <!-- Universal -->
    <string name="ok">OK</string>
    <string name="cancel">Anuluj</string>
    <string name="confirm">Potwierdzenie</string>
    <string name="attention">Uwaga</string>
    <string name="send">Wyślij</string>
    <string name="next">Dalej</string>

    <!-- StartActivity -->
    <string name="no_sim">Nie wykryto karty SIM. Aplikacja zostanie zamknięta.</string>
    <string name="network_locked">Sieć zablokowana. Aplikacja zostanie zamknięta.</string>
    <string name="sim_locked_pin">Karta SIM zablokowana (wymagany kod PIN). Aplikacja zostanie zamknięta.</string>
    <string name="sim_locked_puk">Karta SIM zablokowana (wymagany kod PUK). Aplikacja zostanie zamknięta.</string>
    <string name="sim_unknown">Nieznany stan karty SIM. Aplikacja zostanie zamknięta.</string>

    <!-- Set/EditBankAccountNumber -->
    <string name="set_account_number_error_1">Wprowadzony numer rachunku jest za krótki</string>
    <string name="save">Zapisz</string>
    <string name="update">Aktualizuj</string>
    <string name="number">Numer rachunku</string>
    <string name="name">Nazwa (opcjonalnie)</string>

    <!-- MainActivity -->
    <string name="send_ok">Przesłano stan licznika. W przypadku problemów zostaniesz poinformowany przez wiadomość SMS.</string>
    <string name="send_error_generic">Błąd wysyłania. Stan licznika nie został przesłany.</string>
    <string name="send_error_no_service">Sieć niedostępna. Stan licznika nie został przesłany.</string>
    <string name="send_error_null_pdu">Błąd wysyłania (null PDU). Stan licznika nie został przesłany.</string>
    <string name="send_error_radio_off">Tryb samolotowy jest włączony. Stan licznika nie został przesłany.</string>
    <string name="success">Sukces</string>
    <string name="notification_ask">Czy chcesz uruchomić przypomnienia pierwszego dnia miesiąca?</string>
    <string name="notifications">Przypomnienia</string>
    <string name="yes">TAK</string>
    <string name="no">NIE</string>

    <!-- HistoricalData -->
    <string name="historical_data_title">Dane historyczne</string>

    <!-- ListBankAccountNumber -->
    <string name="list_bank_account_number_title">Lista numerów</string>
    <string name="list_bank_account_number_text">Dotknij aby wybrać. Przytrzymaj aby usunąć.</string>
    <string name="add_new_number">Dodaj</string>

    <!-- FragmentFirst -->
    <string name="sending">Wysyłanie</string>
    <string name="sending_in_progress">Przesyłanie stanu gazomierza. Proszę, czekaj</string>
    <string name="list_of_numbers">Lista numerów</string>

    <string name="no_sim_ff">Nie wykryto karty SIM. Stan licznika nie został przesłany.</string>
    <string name="network_locked_ff">Sieć zablokowana.  Stan licznika nie został przesłany</string>
    <string name="sim_locked_pin_ff">Karta SIM zablokowana (wymagany kod PIN).  Stan licznika nie został przesłany</string>
    <string name="sim_locked_puk_ff">Karta SIM zablokowana (wymagany kod PUK).  Stan licznika nie został przesłany</string>
    <string name="sim_unknown_ff">Nieznany stan karty SIM.  Stan licznika nie został przesłany</string>

    <!-- FragmentSecond -->
    <string name="reminder_text">Przypomnienia będą wyświetlane pierwszego dnia miesiąca o</string>
    <string name="reminder_off">Przypomnienia są wyłączone</string>
    <string name="reminder_on">Przypomnienia są włączone</string>
    <string name="reminder_set_time">Wybierz godzinę</string>
    <string name="reminder_set_day">Wybierz dzień miesiąca</string>

    <string name="information">Informacje</string>
    <string name="historical_data">Dane historyczne</string>
    <string name="reminder_text_example">Przypomnienia będą wyświetlane pierwszego dnia miesiąca o 00:00</string>

    <!-- Notification -->
    <string name="notification_title">Przypomnienie o odczycie</string>
    <string name="notification_text">Dotknij, by podać stan licznika</string>


    <string name="privacy_policy_title">Polityka prywatności</string>
    <string name="privacy_policy">Aplikacja "Odczyt gazu SMS" została zbudowana jako darmowa. Jest udostępniona bezpłatnie i przeznaczona do użytku w stanie takim, jaki jest. Autor aplikacji nie ponosi żadnej odpowiedzialności za aplikację lub sposób jej działania.
\n\n
Ta strona służy do informowania odwiedzających witrynę o zasadach dotyczących gromadzenia, wykorzystywania i ujawniania danych osobowych, jeśli ktoś zdecydował się skorzystać z oferowanej aplikacji.
\n\n
Jeśli zdecydujesz się skorzystać z tej aplikacji, zgadzasz się na zbieranie i wykorzystywanie informacji w związku z tymi zasadami. Dane osobowe, które gromadzimy, są wykorzystywane do świadczenia i ulepszania aplikacji. Twoje dane nie będą wykorzystane ani udostępnione nikomu, z wyjątkiem sytuacji opisanych w niniejszej Polityce prywatności.
\n\n
Terminy użyte w niniejszej Polityce prywatności mają takie samo znaczenie jak w Warunkach korzystania z usługi, które są dostępne w aplikacji, chyba że w niniejszej Polityce prywatności określono inaczej.
\n\n
<b>Gromadzenie i wykorzystanie informacji</b>
\n\n
Aby uzyskać lepsze wrażenia podczas korzystania z tej aplikacji, aplikacja może wymagać od Ciebie dostarczenia pewnych danych osobowych, w tym między innymi numeru klienta PGNiG. Informacje te są przechowywane na urządzeniu i nie są gromadzone w jakikolwiek sposób.
\n\n
<b>Dane dziennika</b>
\n\n
Za każdym razem, gdy korzystasz z aplikacji, w przypadku błędu w aplikacji zbierane są dane i informacje (za pośrednictwem produktów stron trzecich) w telefonie o nazwie "Dane dziennika". Te dane dziennika mogą zawierać informacje, takie jak adres IP twojego urządzenia ("IP"), nazwa urządzenia, wersja systemu operacyjnego, konfiguracja aplikacji, czas i data korzystania z aplikacji, oraz inne statystyki.
\n\n
<b>Cookies</b>
\n\n
Pliki cookie to pliki zawierające niewielką ilość danych, która jest powszechnie używana jako anonimowy unikalny identyfikator. Są one wysyłane do przeglądarki z witryny odwiedzanej przez użytkownika i przechowywane w pamięci wewnętrznej urządzenia.
\n\n
Ta aplikacja nie wykorzystuje jawnie "plików cookies". Jednak aplikacja może wykorzystywać kod i biblioteki stron trzecich, które używają plików "cookies" do gromadzenia informacji i ulepszania swoich usług. Możesz zaakceptować lub odrzucić te pliki cookie i wiedzieć, kiedy plik cookie jest wysyłany na Twoje urządzenie. Jeśli zdecydujesz się zrezygnować z plików cookie, możesz nie być w stanie korzystać z niektórych funkcji tej aplikacji.
\n\n
<b>Bezpieczeństwo</b>
\n\n
Aplikacja stara się wykorzystywać komercyjnie akceptowalne sposoby ochrony danych. Należy jednak pamiętać, że żadna metoda transmisji przez Internet lub metoda elektronicznego przechowywania danych nie jest w 100% bezpieczna i niezawodna, dlatego nie można zagwarantować jej całkowitego bezpieczeństwa.
\n\n
<b>Odnośniki do innych stron</b>
\n\n
Aplikacja może zawierać linki do innych stron. Jeśli klikniesz link strony trzeciej, zostaniesz przekierowany do tej witryny. Należy wtedy zapoznać się z polityką prywatności tych stron. Twórca aplikacji nie ma żadnej kontroli i nie ponosi żadnej odpowiedzialności za zawartość, politykę prywatności lub praktyki stron lub usług stron trzecich.
\n\n
<b>Zmiany w polityce prywatności</b>
\n\n
Polityka prywatności może być aktualizowana od czasu do czasu. Dlatego zaleca się okresowe sprawdzanie tej strony w poszukiwaniu jakichkolwiek zmian. Wszelkie zmiany w Polityce prywatności zostaną opublikowane na tej stronie. Zmiany wchodzą w życie natychmiast po ich opublikowaniu na tej stronie.
\n\n
<b>Kontakt</b>
\n\n
Jeśli masz jakieś pytania lub sugestie dotyczące Polityki prywatności, nie wahaj się skontaktować się z sebastianczuma@icloud.com</string>
</resources>
