<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_set_bank_account_number"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.scz.odczytgazomierza.Activities.EditBankAccountNumber">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/edit_bank_account_number"
        android:fontFamily="@font/montserrat_bold"
        android:textColor="@android:color/black"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/bank_account_info"
        android:textSize="17sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bank_account_number_input"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/text">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerInParent="true"
            android:src="@drawable/image_number"
            tools:ignore="ContentDescription" />

    </RelativeLayout>

    <EditText
        android:id="@+id/bank_account_number_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:digits="0123456789"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/number"
        android:fontFamily="@font/montserrat_regular"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:inputType="number"
        android:maxLength="32"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/bank_account_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bank_account_number_input"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/montserrat_regular"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/name"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:inputType="text"
        android:maxLength="26"
        android:textSize="17sp" />

    <Button
        android:id="@+id/where_to_find"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bank_account_name_input"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/montserrat_bold"
        android:background="@android:color/transparent"
        android:text="@string/where_to_find"
        android:textColor="@color/orange"
        android:textSize="17sp" />

    <Button
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:fontFamily="@font/montserrat_bold"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:background="@drawable/button_dark_blue"
        android:layout_margin="8dp"
        android:text="@string/update"
        android:textColor="#fff"
        android:textSize="17dp" />

</RelativeLayout>
