<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_set_bank_account_number"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.scz.odczytgazomierza.Activities.SetBankAccountNumber">

    <RelativeLayout
        android:id="@+id/activity_set_bank_account_number_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/set_bank_account_number"
            android:textColor="@color/dark_blue"
            android:textSize="26sp" />

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/bank_account_info"
            android:textSize="16sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/bank_account_number_input"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/text">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                android:src="@drawable/image_number"
                tools:ignore="ContentDescription" />

        </RelativeLayout>

        <EditText
            android:id="@+id/bank_account_number_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:digits="0123456789"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/number"
            android:inputType="number"
            android:maxLength="32" />

        <EditText
            android:id="@+id/bank_account_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/bank_account_number_input"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/name"
            android:inputType="text"
            android:maxLength="26" />

        <Button
            android:id="@+id/where_to_find"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bank_account_name_input"
            android:layout_centerHorizontal="true"
            android:background="@android:color/transparent"
            android:text="@string/where_to_find"
            android:textColor="@color/orange"
            android:textSize="16sp" />

        <Button
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:background="@drawable/button_dark_blue"
            android:text="@string/save"
            android:textColor="#fff"
            android:textSize="16sp" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/image_for_blur"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="ContentDescription" />

</RelativeLayout>
