<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.scz.odczytgazomierza.Activities.MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/meter_reading"
        android:textColor="@android:color/black"
        android:fontFamily="@font/montserrat_bold"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/meter_reading_info"
        android:textSize="17sp" />

    <ImageButton
        android:id="@+id/next_fragment"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:background="@android:color/transparent"
        app:srcCompat="@drawable/ic_keyboard_arrow_right"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/meter_reading_input"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/edit_text_dark_blue"
        android:digits="0123456789"
        android:ems="10"
        android:gravity="end"
        android:inputType="number"
        android:maxLength="5"
        android:padding="10dp"
        android:paddingEnd="55dp"
        android:paddingStart="0dp"
        android:fontFamily="@font/montserrat_regular"
        android:textColor="#fff"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/meter_reading_input"
        android:layout_alignEnd="@+id/meter_reading_input"
        android:layout_alignTop="@+id/meter_reading_input"
        android:elevation="3dp"
        android:fontFamily="@font/montserrat_regular"
        android:paddingEnd="10dp"
        android:paddingStart="0dp"
        android:text="@string/m3"
        android:textColor="#e4555f"
        android:textSize="22sp" />

    <Button
        android:id="@+id/send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/button_red"
        android:text="@string/send"
        android:layout_margin="8dp"
        android:fontFamily="@font/montserrat_bold"
        android:textColor="#fff"
        android:textSize="17sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/send"
        android:layout_below="@+id/next_fragment">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/bank_account_number_info"
            android:layout_alignStart="@+id/bank_account_number"
            android:text="pierwszy"
            android:fontFamily="@font/montserrat_regular"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/bank_account_number_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/bank_account_number"
            android:layout_alignStart="@+id/bank_account_number"
            android:text="@string/bank_account_number_info"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/bank_account_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="16dp"
            android:text="@string/bank_account_number_example"
            android:fontFamily="@font/montserrat_regular"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/edit"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignStart="@id/bank_account_number"
            android:layout_below="@+id/bank_account_number"
            android:background="@android:color/transparent"
            android:text="@string/edit_number"
            android:textColor="@color/orange"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="17sp" />

        <Button
            android:id="@+id/choose"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignEnd="@id/bank_account_number"
            android:layout_below="@+id/bank_account_number"
            android:background="@android:color/transparent"
            android:text="@string/list_of_numbers"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/orange"
            android:textSize="17sp" />
    </RelativeLayout>
</RelativeLayout>
