<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_start"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.scz.odczytgazomierza.Activities.StartActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/meter_reading"
        android:fontFamily="@font/montserrat_bold"
        android:textColor="@android:color/black"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="24dp"
        android:text="@string/permission_info"
        android:fontFamily="@font/montserrat_regular"
        android:textSize="17dp" />

    <ImageView
        android:id="@+id/centerView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        android:src="@drawable/image_hand_2"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/grant_permission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="8dp"
        android:background="@drawable/button_dark_blue"
        android:text="@string/continue_button"
        android:fontFamily="@font/montserrat_bold"
        android:textColor="#fff"
        android:textSize="17dp" />

</RelativeLayout>
