<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.scz.odczytgazomierza.Activities.StartActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/list_bank_account_number_title"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="@android:color/black"
                android:textSize="26sp" />

            <TextView
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/list_bank_account_number_text"
                android:textSize="17sp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:horizontalSpacing="10dp"
                android:numColumns="auto_fit"
                android:paddingEnd="20px"
                android:scrollbars="none"
                android:verticalSpacing="10dp" />

            <Button
                android:id="@+id/add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20px"
                android:layout_marginEnd="20px"
                android:layout_marginStart="20px"
                android:layout_marginTop="8dp"
                android:background="@drawable/button_dark_blue"
                android:text="@string/add_new_number"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="#fff"
                android:textSize="17sp" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</RelativeLayout>
