<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="com.scz.odczytgazomierza.Activities.MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:text="@string/information"
        android:textColor="@color/dark_blue"
        android:textSize="26dp" />


    <ImageButton
        android:id="@+id/previous_fragment"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="-10dp"
        android:background="@android:color/transparent"
        app:srcCompat="@drawable/ic_keyboard_arrow_left"
        tools:ignore="ContentDescription" />

    <RelativeLayout
        android:id="@+id/historical_data"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/title"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_dark_blue"
        android:elevation="3dp"
        android:padding="10dp">

        <ImageView
            android:id="@+id/format"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/ic_format"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/historical_data_text"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/format"
            android:gravity="center"
            android:text="@string/historical_data"
            android:textColor="#fff"
            android:textSize="18dp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/reminder_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/historical_data"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/reminder_text_example"
        android:textSize="16dp"
        android:visibility="invisible" />

    <RelativeLayout
        android:id="@+id/notification"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/historical_data"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_dark_blue"
        android:elevation="3dp"
        android:padding="10dp">

        <ImageView
            android:id="@+id/notifications_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/ic_notifications_off"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/notifications_text"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/notifications_icon"
            android:gravity="center"
            android:text="@string/reminder_off"
            android:textColor="#fff"
            android:textSize="18dp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/privacy_policy"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="Polityka prywatności"
        android:textColor="@color/orange"
        android:textSize="18dp" />

</RelativeLayout>
